[package]
name = "zyra"
version = "0.1.0"
edition = "2025"

[dependencies]
# Core async and concurrency
tokio = { version = "1.32", features = ["full"] }
rayon = "1.8"
dashmap = "5.5"

# Networking & P2P
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux", "mdns", "gossipsub", "serde", "websocket"] }

# Serialization & storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
hex = "0.4"
rocksdb = "0.21"
sled = "0.34"

# Cryptography & security
sha2 = "0.10"
blst = "0.3"
ed25519-dalek = "1.0"
bls_signatures = "0.5"
ring = "0.17"
zeroize = "1.6"
argon2 = "0.5"

# WASM smart contracts
wasmtime = "13.0"

# Web server & APIs
axum = { version = "0.7", features = ["headers", "ws", "macros"] }

# Observability & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
prometheus = "0.14"
metrics = "0.21"

# Time & utilities
chrono = "0.4"
anyhow = "1.0"
rand = "0.8"
async-std = "1.12"
futures = "0.3"

# Testing & benchmarking
proptest = "1.4"
criterion = "0.5"

# Remove warp unless you need it for legacy endpoints
# warp = "0.3"
