[package]
name = "zyra"
version = ""
edition = "2025"

[dependencies]
# Core async and concurrency
tokio = { version = ""] }

# Networking & P2P
libp2p = { version = ""] }
yamux = "0.9"

# Serialization & storage
serde = { version = ""] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
rocksdb = "0.19"
sled = "0.34"

# Cryptography & security
sha2 = "0.10"
blst = "0.3"
ed25519-dalek = "1.0"
bls_signatures = "0.5"
ring = "0.17"
zeroize = "1.6"
argon2 = "0.5"
secp256k1 = "0.24"

# WASM smart contracts
wasmtime = "13.0"

# Web server & APIs
axum = { version = ""] }

# Observability & metrics
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = ""] }
metrics = "0.20"
metrics-exporter-prometheus = "0.11"

# Time & utilities
chrono = "0.4"
anyhow = "1.0"
rand = "0.8"
async-std = "1.12"
futures = "0.3"

# Testing & benchmarking
proptest = "1.4"
criterion = "0.5"

# Remove warp unless you need it for legacy endpoints
# warp = "0.3"

[dev-dependencies]
tokio = { version = ""] }
tempfile = "3.2"
serial_test = "0.5"
